--- a/Practica1/Practica1.ipynb
+++ b/Practica1/Practica1.ipynb
@@ -8,7 +8,8 @@
         "id": "vDhHjkbxDj3G"
       },
       "source": [
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/PeraltaFede/InformaticaPracticas/blob/main/Practica1/Practica1.ipynb)"
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/PeraltaFede/InformaticaPracticas/blob/main/Practica1/Practica1.ipynb)\n",
+        "\n"
       ]
     },
     {
@@ -192,13 +193,15 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "id": "ssTVnWBFQ0tC",
       "metadata": {
         "id": "ssTVnWBFQ0tC"
       },
       "source": [
-        "# 2. Contabilizar la cantidad de compuertas lógicas:\n",
+        "Contabilizar la cantidad de compuertas lógicas:\n",
+        "-----------------------------------------------\n",
         "\n",
         "En esta práctica estaremos utilizando 3 tipos de compuertas: AND, OR y NOT, sus símbolos y fórmulas pueden verse en la Figura de abajo.\n",
         "> ![Compuertas](https://github.com/PeraltaFede/InformaticaPracticas/blob/main/Practica1/compuertas.png?raw=true)\n",
@@ -229,7 +232,7 @@
         }
       ],
       "source": [
-        "#@markdown     Complete los datos de acuerdo a la cantidad de compuertas lógicas que observa en la Figura 1.\n",
+        "#@markdown     2. Complete los datos de acuerdo a la cantidad de compuertas lógicas que observa en la Figura 1.\n",
         "numero_de_compuertas_AND_con_2_entradas = None #@param {type:\"integer\"}\n",
         "numero_de_compuertas_AND_con_3_entradas = None #@param {type:\"integer\"}\n",
         "numero_de_compuertas_OR_con_2_entradas = None #@param {type:\"integer\"}\n",
