--- a/Practica1/Practica1.ipynb
+++ b/Practica1/Practica1.ipynb
@@ -232,7 +232,7 @@
         }
       ],
       "source": [
-        "#@markdown     2. Complete los datos de acuerdo a la cantidad de compuertas lógicas que observa en la Figura 1.\n",
+        "#@markdown # 2. Complete los datos de acuerdo a la cantidad de compuertas lógicas que observa en la Figura 1.\n",
         "numero_de_compuertas_AND_con_2_entradas = None #@param {type:\"integer\"}\n",
         "numero_de_compuertas_AND_con_3_entradas = None #@param {type:\"integer\"}\n",
         "numero_de_compuertas_OR_con_2_entradas = None #@param {type:\"integer\"}\n",
